# School-Hub

./: .babelrc.js  .cursorignore  .env.backup  .env.example  .env.local  .gitignore  Dockerfile  Folder-Tree.txt  babel.config.js  docker-compose.monitoring.yml  docker-compose.yml  drizzle.config.ts  jest.config.js  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.server.json  types.d.ts
.next/: trace
Browser/cef/: CMakeLists.txt
Browser/cef/cmake/: FindCEF.cmake
Browser/cef/include/: cef_app.h  cef_client.h
Browser/cef/src/: cef_app.cc  cef_client.cc  cef_client.h  main.cc
Folder-Tree/: Backend.txt
admin/: user-details.html
app/: client-layout.tsx  layout.tsx  metadata.ts  page.tsx  providers.tsx
components/: AdminRoles.tsx  action-tooltip.tsx  error-boundary.tsx  file-upload.tsx  icons.tsx  nav.tsx  theme-provider.tsx  user-avatar.tsx  user-nav.tsx
docs/: API.md  README.md
hooks/: use-bookmarks.ts  use-browser-history.ts  use-chat-query.ts  use-chat-scroll.ts  use-chat-socket.ts  use-friends.ts  use-infinite-scroll.ts  use-keyboard-shortcuts.ts  use-modal-store.ts  use-offline.ts  use-performance.ts  use-privacy-mode.ts  use-settings.ts  use-theme-effects.ts  use-users.ts  useDebounce.ts
lib/: api-middleware.ts  api.ts  auth.ts  cache-manager.ts  chart-theme.ts  chat-monitoring.ts  error-handler.ts  error-tracking.ts  mock-data.ts  optimizations.ts  performance.ts  permissions.ts  prisma.ts  providers.tsx  redis.ts  report-generator.ts  service-worker.ts  socket.ts  storage.ts  theme.ts  types.ts  uploadthing.ts  utils.ts
prisma/: schema.prisma  seed.sql  seed.ts
prometheus/: prometheus.yml
providers/: chat-provider.tsx
scripts/: backup-schedule.sh  backup.sh  (+6 more)
(+529 files in other folders)
